@@ -1,0 +1,4 @@
+See ChangeLog for information on updates.
+
+Since this is a rolling release of development tools, I don't intend to write NEWS.
+
