@@ -1,3 +1,7 @@
+2014-09-01	Erik E. Lorenz	<erik.e.lorenz@gmail.com>
+
+	* src/latexrefre.sh: emphasising errors and warnings using bash color escape codes
+
 2014-08-28	Erik E. Lorenz	<erik.e.lorenz@gmail.com>
 
 	* src/lmpmpi.sh: removed
